grammar.js
    source_file: ($) =>
      seq(
        repeat($._newline),
        optional(
          seq(
            $._instruction,
            repeat(seq(repeat1($._newline), $._instruction)),
            repeat($._newline),
          ),
        ),
      ),

    _instruction: ($) =>
      choice(
        $.from_instruction,
        $.run_instruction,
        $.cmd_instruction,
        $.label_instruction,
        $.expose_instruction,
        $.env_instruction,
        $.add_instruction,
        $.copy_instruction,
        $.entrypoint_instruction,
        $.volume_instruction,
        $.user_instruction,
        $.workdir_instruction,
        $.arg_instruction,
        $.onbuild_instruction,
        $.stopsignal_instruction,
        $.healthcheck_instruction,
        $.shell_instruction,
        $.maintainer_instruction,
        $.cross_build_instruction,
      ),

    from_instruction: ($) =>
      seq(
        alias(/[fF][rR][oO][mM]/, 'FROM'),
        optional($.param),
        $.image_spec,
        optional(seq(alias(/[aA][sS]/, 'AS'), field('as', $.image_alias))),
      ),

    label_instruction: ($) =>
      seq(
        alias(/[lL][aA][bB][eE][lL]/, 'LABEL'),
        choice(repeat1($.label_pair), alias($._spaced_label_pair, $.label_pair)),
      ),

    expose_instruction: ($) =>
      seq(
        alias(/[eE][xX][pP][oO][sS][eE]/, 'EXPOSE'),
        repeat1(choice($.expose_port, $.expansion)),
      ),

    env_instruction: ($) =>
      seq(
        alias(/[eE][nN][vV]/, 'ENV'),
        choice(repeat1($.env_pair), alias($._spaced_env_pair, $.env_pair)),
      ),

    add_instruction: ($) =>
      seq(
        alias(/[aA][dD][dD]/, 'ADD'),
        repeat($.param),
        choice(
          $.json_string_array,
          seq(
            repeat1(
              seq(alias($.path_with_heredoc, $.path), $._non_newline_whitespace),
            ),
            alias($.path_with_heredoc, $.path),
            repeat($.heredoc_block),
          ),
        ),
      ),

    copy_instruction: ($) =>
      seq(
        alias(/[cC][oO][pP][yY]/, 'COPY'),
        repeat($.param),
        choice(
          $.json_string_array,
          seq(
            repeat1(
              seq(alias($.path_with_heredoc, $.path), $._non_newline_whitespace),
            ),
            alias($.path_with_heredoc, $.path),
            repeat($.heredoc_block),
          ),
        ),
      ),

    volume_instruction: ($) =>
      seq(
        alias(/[vV][oO][lL][uU][mM][eE]/, 'VOLUME'),
        choice(
          $.json_string_array,
          seq($.path, repeat(seq($._non_newline_whitespace, $.path))),
        ),
      ),

    user_instruction: ($) =>
      seq(
        alias(/[uU][sS][eE][rR]/, 'USER'),
        field('user', alias($._user_name_or_group, $.unquoted_string)),
        optional(
          seq(
            token.immediate(':'),
            field('group',
              alias($._immediate_user_name_or_group, $.unquoted_string)),
          ),
        ),
      ),

    _user_name_or_group: ($) =>
      seq(
        choice(/([a-zA-Z][-A-Za-z0-9_]*|[0-9]+)/, $.expansion),
        repeat($._immediate_user_name_or_group_fragment),
      ),

    // same as _user_name_or_group but sticks to previous token
    _immediate_user_name_or_group: ($) =>
      repeat1($._immediate_user_name_or_group_fragment),

    workdir_instruction: ($) =>
      seq(alias(/[wW][oO][rR][kK][dD][iI][rR]/, 'WORKDIR'), $.path),

    onbuild_instruction: ($) =>
      seq(alias(/[oO][nN][bB][uU][iI][lL][dD]/, 'ONBUILD'), $._instruction),

    stopsignal_instruction: ($) =>
      seq(
        alias(/[sS][tT][oO][pP][sS][iI][gG][nN][aA][lL]/, 'STOPSIGNAL'),
        $._stopsignal_value,
      ),

    _stopsignal_value: ($) =>
      choice(
        $.double_quoted_string,
        seq(
          choice(/[A-Z0-9+-]+/, $.expansion),
          repeat(choice(token.immediate(/[A-Z0-9+-]+/), $._immediate_expansion)),
        ),
      ),

    path: ($) =>
      seq(
        choice(
          /[^-\s\$<]/, // cannot start with a '-' to avoid conflicts with params
          /<[^<]/, // cannot start with a '<<' to avoid conflicts with heredocs (a single < is fine, though)
          $.expansion,
        ),
        repeat(choice(token.immediate(/[^\s\$]+/), $._immediate_expansion)),
      ),

    expansion: $ =>
      seq('$', $._expansion_body),

    // we have 2 rules b/c aliases don't work as expected on seq() directly
    _immediate_expansion: $ => alias($._imm_expansion, $.expansion),
    _expansion_body: $ =>
      choice(
        $.variable,
        seq(
          token.immediate('{'),
          alias(token.immediate(/[^\}]+/), $.variable),
          token.immediate('}'),
        ),
      ),

    variable: () => token.immediate(/[a-zA-Z_][a-zA-Z0-9_]*/),

    env_pair: ($) =>
      seq(
        field('name', $._env_key),
        token.immediate('='),
        optional(
          field('value', $._env_assignment_value),
        ),
      ),

    _env_assignment_value: ($) =>
      choice(
        $.double_quoted_string,
        $._env_single_quoted_string_with_trailing_quote,
        $.unquoted_string,
      ),

    _spaced_env_pair: ($) =>
      seq(
        field('name', $._env_key),
        choice(
          seq(
            token.immediate(/\s+/),
            field('value',
              choice(
                $.double_quoted_string,
                $.single_quoted_string,
                alias($._spaced_env_value, $.unquoted_string),
              )),
          ),
          field('value', alias($._continued_spaced_env_value, $.unquoted_string)),
        ),
      ),

    _env_key: ($) =>
      alias(/[a-zA-Z_][a-zA-Z0-9_]*/, $.unquoted_string),

    expose_port: () => seq(/\d+(-\d+)?/, optional(choice('/tcp', '/udp'))),

    label_pair: ($) =>
      seq(
        field('key', $._label_key),
        token.immediate('='),
        field('value',
          choice(
            $.double_quoted_string,
            $.single_quoted_string,
            $.unquoted_string,
          )),
      ),

    _spaced_label_pair: ($) =>
      seq(
        field('key', $._label_key),
        // Legacy LABEL treats the first word as the key and the rest of the
        // line as the value, so quotes remain literal value text.
        choice(
          seq(
            token.immediate(/\s+/),
            field('value', alias($._spaced_label_value, $.unquoted_string)),
          ),
          field('value', alias($._continued_spaced_label_value, $.unquoted_string)),
        ),
      ),

    _label_key: ($) =>
      choice(
        alias(/[-a-zA-Z0-9\._]+/, $.unquoted_string),
        $.double_quoted_string,
        $.single_quoted_string,
      ),

    image_spec: ($) =>
      seq(
        field('name', $.image_name),
        field('tag', optional($.image_tag)),
        field('digest', optional($.image_digest)),
      ),

    image_name: ($) =>
      seq(
        choice(/[^@:\s\$-]/, $.expansion),
        repeat(choice(token.immediate(/[^@:\s\$]+/), $._immediate_expansion)),
      ),

    image_tag: ($) =>
      seq(
        token.immediate(':'),
        repeat1(choice(token.immediate(/[^@\s\$]+/), $._immediate_expansion)),
      ),

    image_digest: ($) =>
      seq(
        token.immediate('@'),
        repeat1(choice(token.immediate(/[a-zA-Z0-9:]+/), $._immediate_expansion)),
      ),

    // Generic parsing of options passed right after an instruction name.
    image_alias: ($) => seq(
      choice(/[-a-zA-Z0-9_]+/, $.expansion),
      repeat(choice(token.immediate(/[-a-zA-Z0-9_]+/), $._immediate_expansion)),
    ),

    double_quoted_string: ($) =>
      seq(
        '"',
        repeat(
          choice(
            token.immediate(/[^"\n\\`\$]+/),
            alias($.double_quoted_escape_sequence, $.escape_sequence),
            token.immediate(/\$\(/),
            '\\',
            '`',
            $._immediate_expansion,
          ),
        ),
        '"',
      ),

    // same as double_quoted_string but without $-expansions:
    unquoted_string: ($) =>
      repeat1(
        choice(
          token.immediate(/[^\s\n\"'\\`\$]+/),
          token.immediate(/[\\`] /),
          token.immediate(/[\\`][^\s\n]/),
          $._immediate_expansion,
        ),
      ),

    _non_newline_whitespace: () => token.immediate(/[\t ]+/),
  },
});
